# CardShark

./: .buildinfo  Cards.py  CartPoleTest.py  CoupEngine.py  Logging.py  Main.py  MultiAgent.py  Player.py  README.md  api.html  genindex.html  index.html  intro.html  named_object.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy-docs.yml  pip_install.yml  pylint.yml
_sources/: api.rst.txt  index.rst.txt
cardshark/: agent.py  cards.py  engine.py  logging.py  multi_agent.py  named_object.py  player.py  ui.py
cardshark/examples/coup/: coup.py  coup_agent.py  coup_cards.py  coup_engine.py  coup_player.py  coup_ui_theme.json
doc/source/: api.rst  conf.py  index.rst  intro.rst
doctrees/: api.doctree  environment.pickle  index.doctree
examples/coup/: coup_agent.py  coup_cards.py  coup_engine.py  coup_player.py
html/: api.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: test_cartpole.py  test_human_agent.py  test_training.py
