[project]
    name = "cardshark"
    dynamic = ["version", "dependencies"]

    authors = [
        {name = "Ewan Miller", email = "ewan.m0312@gmail.com"}
    ]

    maintainers = [
        {name = "Ewan Miller", email = "ewan.m0312@gmail.com"}
    ]

    description = "Engine for creating card games and teaching AI agents to play them"

    readme = "README.md"
    
    keywords = [
        "card", 
        "game", 
        "game engine", 
        "machine learning", 
        "artificial intelligence", 
        "reinforcement learning"
    ]

    requires-python= ">= 3.8.0, < 3.12"

[build-system]
    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
